# django_minifier

./: MANIFEST.in  Pipfile  README.md  setup.cfg
django_minifier/: __init__.py  app_directories.py  apps.py  filesystem.py  mixins.py  themes.py  utils.py  version.py
example/: settings.py  urls.py
example/app/: urls.py
example/app/templates/app/: index.html
example/app/themes/default/: index.html
example/templates/: index.html
